	* GSWeb/GSWComponentReference.m
	* GSWeb/GSWContext.m
	* GSWeb/GSWHTMLDynamicElement.m
	* GSWeb/GSWHyperlink.m
	* GSWeb/GSWResourceManager.m
	* GSWeb/GSWResourceRequestHandler.m
	  get rid of extaneous parentheses on equality tests
	* GSWeb/GSWUtils.m
	  NS(U)Integer conversions
	* GSWeb/GSWResourceManager.m
	* GSWeb/GSWHTMLStaticElement.m
	  do not use redundant stringWithString:

2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* regenerate configure from configure.ac

2013-03-02  David Wetzel <dave@turbocat.de>
	add GSWDatabase/Makefile.preamble patch from Sebastian Reitenbach
	
2013-03-01  David Wetzel <dave@turbocat.de>
	* configure.ac
	* GSWeb/GSWUtils.m
	* GSWeb/GSWApplication+Defaults.m
	* GSWeb/GSWHTTPIO.m
	
	Fixed for non-Apple platforms, patch from Sebastian Reitenbach.

2013-02-26  David Wetzel <dave@turbocat.de>
	* added GSWeb/GSWApplication+Defaults.h
	* GSWeb/GNUmakefile: use -Werror
	* GSWeb/GSWFileUpload.* added multiple file support
	* Testing/DynamicElements/FileUpload1Page.wo added multiple file support
	* GSWeb/* fixed warnings on Mountain Lion

2011-05-13  David Wetzel <dave@turbocat.de>
	* GSWAdaptors/Apache2/mod_gsw.c
	modified find_app_by_name() wen dealing with single instances
	include image
	include some css

2010-10-24  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWContext.h
	add @class GSWResourceManager
	add WOMarkupType
	add _markupType;
	reformat
	* GSWeb/GSWContext.m
	add - (WOMarkupType) markupType
	* GSWeb/GSWComponent.h
	add - (WOMarkupType) markupType
	* GSWeb/GSWComponent.m
	add - (WOMarkupType) markupType
	
2010-06-25  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResourceManager.m
	+ GSLanguageFromISOLanguage:
	use 2 steps to find language, first supplied one 'ja-jp'
	if that fails, use 'ja'
	
2010-06-23  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResourceManager.m
	reformat statics, add TheStringsTableLock
	add _cachedStringsTable()
	add _cachedStringForKey()