@@ -14,6 +14,8 @@
 	* GSWeb/GSWResourceManager.m
 	* GSWeb/GSWHTMLStaticElement.m
 	  do not use redundant stringWithString:
+	* GSWeb/GSWContext.m
+	  move @interface before @implementation
 
 2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* regenerate configure from configure.ac
